--- a/projeto_fds/mercado/templates/cadastro.html
+++ b/projeto_fds/mercado/templates/cadastro.html
@@ -21,6 +21,6 @@
         <input type="password" id="confirm_senha" name="confirm_senha" required><br>
         <button type="submit">Cadastrar</button>
     </form>
-    <a href="{% url 'login' %}">Voltar ao login</a>
+    <a href="{% url 'mercado:login' %}">Voltar ao login</a>
 </body>
 </html>
