--- a/projeto_fds/mercado/templates/login.html
+++ b/projeto_fds/mercado/templates/login.html
@@ -15,6 +15,6 @@
         <input type="password" id="senha" name="senha" required><br>
         <button type="submit">Entrar</button>
     </form>
-    <a href="{% url 'cadastro' %}">Não sou cadastrado</a>
+    <a href="{% url 'mercado:cadastro' %}">Não sou cadastrado</a>
 </body>
 </html>
