--- a/projeto_fds/mercado/templates/favoritos.html
+++ b/projeto_fds/mercado/templates/favoritos.html
@@ -98,7 +98,7 @@
     }
 
     .rounded-button2 {
-        background-color: #A75938;
+        background-color: black;
         border: none;
         color: white;
         padding: 15px 32px;
