--- a/projeto_fds/mercado/templates/favoritos.html
+++ b/projeto_fds/mercado/templates/favoritos.html
@@ -202,7 +202,6 @@
 {% endif %}
 
 <div class="button-container">
-    <a href="{% url 'mercado:home' %}" class="rounded-button2" style="color: white; text-decoration: none;">Ver mais
-        produtos</a>
+    <a href="{% url 'mercado:home' %}" class="rounded-button2" style="color: white; text-decoration: none;">Ver mais produtos</a>
 </div>
 {% endblock %}
