--- a/projeto_fds/mercado/templates/login.html
+++ b/projeto_fds/mercado/templates/login.html
@@ -1,10 +1,8 @@
-<!DOCTYPE html>
-<html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
+{% extends 'base/global/base.html' %}
+{% load static %}
+{% block content %}
     <style>
+        
         body {
             font-family: 'Poppins', sans-serif;
             background-color: #f0f0f0;
@@ -63,8 +61,6 @@
             text-decoration: underline;
         }
     </style>
-</head>
-<body>
     <div class="login-container">
         <h2>Login</h2>
         <form method="POST">
@@ -79,5 +75,4 @@
         </form>
         <a href="{% url 'mercado:cadastro' %}">Não sou cadastrado</a>
     </div>
-</body>
-</html>
+    {% endblock %}
