--- a/projeto_fds/mercado/templates/login.html
+++ b/projeto_fds/mercado/templates/login.html
@@ -72,7 +72,7 @@
             
             <label for="senha">Senha:</label>
             <input type="password" id="senha" name="senha" required>
-            <form action="{%url 'home'%}">
+            <form action="{%url 'mercado:home'%}">
             
                 <button type="submit">Entrar</button>
         
