--- a/projeto_fds/mercado/templates/cadastro.html
+++ b/projeto_fds/mercado/templates/cadastro.html
@@ -70,9 +70,32 @@
         a:hover {
             text-decoration: underline;
         }
+
+        /* Mensagens de erro */
+        .messages {
+            list-style-type: none;
+            padding: 0;
+            margin: 0 0 20px 0;
+            color: red;
+            font-size: 14px;
+        }
+
+        .messages li {
+            margin-bottom: 5px;
+        }
     </style>
+
     <div class="cadastro-container">
         <h2>Cadastro</h2>
+
+        {% if messages %}
+            <ul class="messages">
+                {% for message in messages %}
+                    <li>{{ message }}</li>
+                {% endfor %}
+            </ul>
+        {% endif %}
+
         <form method="POST" action="{% url 'mercado:cadastro' %}">
             {% csrf_token %}
             
@@ -111,7 +134,7 @@
             
             <button type="submit">Cadastrar</button>
         </form>
+
         <a href="{% url 'mercado:login' %}">Voltar ao login</a>
     </div>
 {% endblock %}
-
